--- a/website/angular/views/portal/panel.html
+++ b/website/angular/views/portal/panel.html
@@ -1,18 +1,3 @@
-<style>
-    .quickName
-    {
-        max-width: 80px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-
-    .selected{
-        background: #004899;
-        color: white;
-    }
-    </style>
-
 <div class="col-md-10 col-md-offset-1" style="margin-top: 20px;">
     <div style="width: 100%; overflow-x: scroll;">
         <ul >
@@ -119,20 +104,20 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="Offer Name">
+                    <input type="text" class="form-control" ng-model="newOffer.name" placeholder="Offer Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">Description</label>
                     <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Offer Description">
+                    <input type="password" class="form-control" ng-model="newOffer.description" placeholder="Offer Description">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">Start Date</label>
                     <div class="col-sm-10">
                         <p class="input-group">
-                            <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                            <input type="text" class="form-control" uib-datepicker-popup ng-model="newOffer.start" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
                             </span>
@@ -143,7 +128,7 @@
                     <label for="inputPassword3" class="col-sm-2 control-label">End Date</label>
                     <div class="col-sm-10">
                         <p class="input-group">
-                            <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                            <input type="text" class="form-control" uib-datepicker-popup ng-model="newOffer.end" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
                             </span>
@@ -151,8 +136,24 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Save</button>
+                    <label for="inputPassword3" class="col-sm-2 control-label">Start Time</label>
+                        <div class="col-xs-1">
+                            <input type="text" ng-model="newOffer.time.start.hour" class="form-control" placeholder="HH">
+                        </div>
+                        <div class="col-xs-1">
+                            <input type="text" ng-model="newOffer.time.start.minute" class="form-control" placeholder="MM">
+                        </div>
+                        <label for="inputPassword3" class="col-sm-2 control-label">End Time</label>
+                        <div class="col-xs-1">
+                            <input type="text" ng-model="newOffer.time.end.hour" class="form-control" placeholder="HH">
+                        </div>
+                        <div class="col-xs-1">
+                            <input type="text" ng-model="newOffer.time.end.minute" class="form-control" placeholder="MM">
+                        </div>
+                </div>
+                <div class="form-group">
+                    <div class="">
+                    <button type="submit" class="btn btn-success" ng-click="createOffer(newOffer)">Create</button>
                     </div>
                 </div>
             </form>
