--- a/website/angular/views/portal/profile.html
+++ b/website/angular/views/portal/profile.html
@@ -1,21 +1,137 @@
-<div class="col-md-6 col-md-offset-3">
-    <img ng-src="{{profileData.profile.photo}}" style="height: 100px; margin-top: 60px;" class="img-circle center-block">
-    <h2 class="text-center profile-Name">{{profileData.firstname + " " + profileData.surname}}</h2>
-    <div class="btn-group btn-group-justified profile-Bar" role="group" aria-label="...">
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><i class="fa fa-camera" aria-hidden="true"></i> Photos</button>
+<div class="col-md-8 col-md-offset-2">
+  <div style="padding-top:50px;"> </div>
+  <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
+    <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="media">
+              <div align="center">
+                <img class="thumbnail img-responsive" ng-src="../uploads/profile/{{profileData.profile.photo}}" ng-click="changeProfilePhoto()" style="width: 300px; height: 300px;">
+              </div>
+              <div class="media-body">
+                <hr>
+                <h3><strong>Bio</strong></h3>
+                <p>{{profileData}}</p>
+                <hr>
+                <h3><strong>Location</strong></h3>
+                <p>Earth</p>
+                <hr>
+                <h3><strong>Gender</strong></h3>
+                <p>Unknown</p>
+                <hr>
+                <h3><strong>Birthday</strong></h3>
+                <p>January 01 1901</p>
+              </div>
+          </div>
+        </div>
+    </div>
   </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><i class="fa fa-suitcase" aria-hidden="true"></i> Journeys</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><i class="fa fa-users" aria-hidden="true"></i> Following</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><i class="fa fa-users" aria-hidden="true"></i> Followers</button>
-  </div>
-</div>
+  <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="panel panel-default">
+        <div class="panel-body">
+          <span>
+              <h1 class="panel-title pull-left" style="font-size:30px;">{{profileData.firstname + " " + profileData.surname}} <small>{{profileData.email}}</small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
+              <div class="btn-group pull-right" uib-dropdown>
+                <button id="single-button " type="button" class="btn btn-primary" uib-dropdown-toggle>
+                  Following <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                  <li role="menuitem"><a href="#">Unfollow</a></li>
+                </ul>
+              </div>
+              
+          </span>
+          <br><br>
+          Lonewolf, Family holiday and Business Traveller
+          <br><br>
+          <input type="text" class="form-control" placeholder="Status Update" style="border: 0; border-bottom: 1px solid #ddd; border-radius: 0; -webkit-box-shadow: none;">
+          <span class="pull-left">
+          <a href="javascript:void(0)" ng-click="active = 1" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-files-o" aria-hidden="true"></i> Posts</a>
+          <a href="javascript:void(0)" ng-click="active = 2" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Photos <span class="badge">42</span></a>
+          <a href="javascript:void(0)" ng-click="active = 3" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Following <span class="badge">42</span></a>
+          <a href="javascript:void(0)" ng-click="active = 4" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-user" aria-hidden="true"></i> Followers <span class="badge">42</span></a>
+          <a href="javascript:void(0)" ng-click="active = 5" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-suitcase" aria-hidden="true"></i> Journeys <span class="badge">42</span></a>
+          </span>
+          <span class="pull-right">
+          <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-lg fa-at" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Mention"></i></a>
+          <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-lg fa-envelope-o" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Message"></i></a>
+          <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-lg fa-ban" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Ignore"></i></a>
+          </span>
+        </div>
+    </div>
+    <hr>
+    <div id="profileTabs">
+      <uib-tabset active="active">
+        <uib-tab index="1">
+          <!-- Simple post content example. -->
+          <div class="panel panel-default" ng-repeat="activity in profileData.activity">
+              <div class="panel-body">
+                <div class="pull-left">
+                    <a href="#">
+                    <img class="media-object img-circle" ng-src="../uploads/profile/{{profileData.profile.photo}}" width="50px" height="50px" style="margin-right:8px; margin-top:-5px;">
+                    </a>
+                </div>
+                <h4><a href="#/profile/{{profileData._id}}" style="text-decoration:none;"><strong>{{profileData.firstname + " " + profileData.surname}}</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> {{activity.Date}}</i></a></small></small></h4>
+                <span>
+                    <div class="navbar-right">
+                      <div class="dropdown">
+                          <button class="btn btn-link btn-xs dropdown-toggle" type="button" id="dd1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                          <i class="fa fa-cog" aria-hidden="true"></i>
+                          <span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dd1" style="float: right;">
+                            <li><a href="#"><i class="fa fa-fw fa-exclamation-triangle" aria-hidden="true"></i> Report</a></li>
+                            <li><a href="#"><i class="fa fa-fw fa-ban" aria-hidden="true"></i> Ignore</a></li>
+                            <li><a href="#"><i class="fa fa-fw fa-bell" aria-hidden="true"></i> Enable notifications for this post</a></li>
+                            <li><a href="#"><i class="fa fa-fw fa-eye-slash" aria-hidden="true"></i> Hide</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#"><i class="fa fa-fw fa-trash" aria-hidden="true"></i> Delete</a></li>
+                          </ul>
+                      </div>
+                    </div>
+                </span>
+                <hr>
+                <div class="post-content">
+                    <p><i class="fa fa-plane" aria-hidden="true"></i> Travelled to {{activity.Location}}</p>
+                </div>
+                <hr>
+                <div>
+                    <div class="pull-right btn-group-xs">
+                      <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a>
+                      <a class="btn btn-default btn-xs"><i class="fa fa-retweet" aria-hidden="true"></i> Reshare</a>
+                      <a class="btn btn-default btn-xs"><i class="fa fa-comment" aria-hidden="true"></i> Comment</a>
+                    </div>
+                    <div class="pull-left">
+                      <p class="text-muted" style="margin-left:5px;"><i class="fa fa-globe" aria-hidden="true"></i> Public</p>
+                    </div>
+                    <br>
+                </div>
+                <hr>
+                <div class="media">
+                    <div class="pull-left">
+                      <a href="#">
+                      <img class="media-object img-circle" ng-src="../uploads/profile/{{profileData.profile.photo}}" width="35px" height="35px" style="margin-left:3px; margin-right:-5px;">
+                      </a>
+                    </div>
+                    <div class="media-body">
+                      <div class="col-md-2">
+                        <textarea class="form-control" rows="1" placeholder="Comment" style="width: 70%;"></textarea>
+                      </div>
+                      
+                    </div>
+                </div>
+              </div>
+          </div>
+        </uib-tab>
+        <uib-tab index="2">
+          <button type="button" class="btn btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 5px; float: right;" ng-click="newAlbum()">New Album</button>
+          <section ng-repeat="album in albums">
+            <h3>{{album.album}}</h3>
+
+          </section>
+        </uib-tab>
+        <uib-tab index="3">Vertical content 2</uib-tab>
+        <uib-tab index="4">Vertical content 2</uib-tab>
+        <uib-tab index="5">Vertical content 2</uib-tab>
+      </uib-tabset>
+    </div>    
 </div>
