--- a/website/angular/views/portal/profile.html
+++ b/website/angular/views/portal/profile.html
@@ -46,8 +46,8 @@
           <input type="text" class="form-control" placeholder="Status Update" style="border: 0; border-bottom: 1px solid #ddd; border-radius: 0; -webkit-box-shadow: none;">
           <span class="pull-left">
           <a href="javascript:void(0)" ng-click="active = 1" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-files-o" aria-hidden="true"></i> Posts</a>
-          <a href="javascript:void(0)" ng-click="active = 2" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Photos <span class="badge">42</span></a>
-          <a href="javascript:void(0)" ng-click="active = 3" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Following <span class="badge">42</span></a>
+          <a href="javascript:void(0)" ng-click="active = 2" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Photos <span class="badge">{{imageCount}}</span></a>
+          <a href="javascript:void(0)" ng-click="active = 3" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Following <span class="badge">{{profileData.following.length + profileData.following_attractions.length}}</span></a>
           <a href="javascript:void(0)" ng-click="active = 4" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-user" aria-hidden="true"></i> Followers <span class="badge">42</span></a>
           <a href="javascript:void(0)" ng-click="active = 5" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-suitcase" aria-hidden="true"></i> Journeys <span class="badge">42</span></a>
           </span>
@@ -125,15 +125,62 @@
         <uib-tab index="2">
           <button type="button" class="btn btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 5px; float: right;" ng-click="newAlbum()">New Album</button>
           <section ng-repeat="album in albums">
-            <h3 ng-click="showAlbum(album)">{{album.album}}</h3>
+            <h3 ng-click="showAlbum(album)">{{album.album}} <span ng-if="album.photos.length > 0" class="label label-default">{{album.photos.length}} photos</span></h3>
 
           </section>
         </uib-tab>
-        <uib-tab index="3">Vertical content 2</uib-tab>
+        <uib-tab index="3">
+          <section style="width: 100%; height: 40px;">
+            <div class="btn-group" uib-dropdown style="float: right; margin-bottom: 20px;">
+              <button id="split-button" type="button" class="btn btn-danger">Filter ({{selectedFilter}})</button>
+              <button type="button" class="btn btn-danger" uib-dropdown-toggle>
+                <span class="caret"></span>
+                <span class="sr-only">Filter ({{selectedFilter}})</span>
+              </button>
+              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="split-button">
+                <li role="menuitem"><a href="javascript:void(0)" ng-click="filterList('Users')">Users</a></li>
+                <li role="menuitem"><a href="javascript:void(0)" ng-click="filterList('Places')">Places</a></li>
+              </ul>
+            </div>
+          </section>
+
+            <div class="block-update-card status" ng-repeat="fol in followingList">
+              {{fol}}
+              <div class="update-card-body">
+                <div class="update-card-body">
+                  <div class="col-xs-3">
+                    <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/q84/s960x960/16797156_1653912594625914_8836844879869293276_o.jpg?oh=f4a3bfa198b93ebed661599f3850b31a&oe=59519DC0" style="width: 100%;">
+                  </div>
+                  <div class="col-xs-9">
+                    <h4>Vinothbabu K</h4>
+                    <p>User from Aberdeen</p>
+                  </div>
+                  
+                  
+                </div>
+              </div>
+              <div class="card-action-pellet btn-toolbar pull-right" role="toolbar">
+                <div class="btn-group fa fa-map-marker"></div>
+                <div class="btn-group fa fa-magic"></div>
+                <div class="btn-group fa fa-photo"></div>
+              </div>
+          </div>
+        </uib-tab>
         <uib-tab index="4">Vertical content 2</uib-tab>
         <uib-tab index="5">Vertical content 2</uib-tab>
         <uib-tab index="6">
+          <div style="padding-bottom: 50px;">
+          <h3 ng-click="backToAlbums()" style="float: left;"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</h3>
           <button type="button" class="btn btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 5px; float: right;" ng-click="uploadPhotos()">Upload Photos</button>
+          </div>
+          <div ng-repeat="photo in album.photos">
+            <div class="col-xs-6 col-md-3">
+              <a href="javascript:void(0)" class="thumbnail">
+                <img src="../uploads/photos/{{photo.file}}" alt="..." ng-click="showImage(photo)">
+              </a>
+            </div>
+            
+          </div>
         </uib-tab>
       </uib-tabset>
     </div>    
@@ -154,5 +201,14 @@
     <section class="text-center" style="font-size: 64px;">
       <i class="fa fa-file-image-o" aria-hidden="true"></i>
     </section>
+  </div>
+</script>
+
+<script type="text/ng-template" id="showImage.html">
+  <div class="modal-body" id="modal-body">
+    <img ng-src="../uploads/photos/{{photo.file}}" class="center-block" style="height: 90%;">
+  </div>
+  <div class="modal-footer">
+    {{photo.time}}
   </div>
 </script>
