--- a/website/angular/views/portal/social.html
+++ b/website/angular/views/portal/social.html
@@ -2,7 +2,7 @@
    <div class="panel-body">
       <div class="col-md-10 col-md-push-2" style="padding-left: 0; height: 60px;">
          <dl>
-            <dt style="width: 100%;"><a href="#/profile/{{person['_id']}}">{{person.firstname + " " + person.surname}}</a> <span style="float: right; font-size: 24px;"><i class="fa" uib-tooltip="{{person.activity[0].tooltipTxt}}" ng-class="(person.activity[0].aData == null)? 'fa-paper-plane-o' : 'fa-paper-plane'" aria-hidden="true" style="cursor: pointer;" ng-click="like(person.activity[0], person)"></i></span></dt>
+            <dt style="width: 100%;"><a href="#/profile/{{person['_id']}}">{{person.firstname + " " + person.surname}}</a> <span style="float: right; font-size: 24px;"><i class="fa" uib-tooltip="{{person.activity[0].tooltipTxt}}" ng-class="(person.activity[0].aData == null)? 'fa-paper-plane-o' : 'fa-paper-plane'" aria-hidden="true" style="cursor: pointer;" ng-click="like(person.activity[0], person, 'post')"></i></span></dt>
             <dd style="font-size: 10px">{{person.activity[0].Date}}</dd>
             <dd><i class="fa fa-plane" aria-hidden="true" style="font-size: 24px;"></i> Travelled to {{person.activity[0].Location}}</dd>
          </dl>
