--- a/website/angular/views/portal/profile.html
+++ b/website/angular/views/portal/profile.html
@@ -55,7 +55,7 @@
           <a href="javascript:void(0)" ng-click="active = 2" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-picture-o" aria-hidden="true"></i> Photos <span class="badge">{{imageCount}}</span></a>
           <a href="javascript:void(0)" ng-click="active = 3" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Following <span class="badge">{{profileData.following.length + profileData.following_attractions.length}}</span></a>
           <a href="javascript:void(0)" ng-click="active = 4" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-user" aria-hidden="true"></i> Followers <span class="badge">{{followers.length}}</span></a>
-          <a href="javascript:void(0)" ng-click="active = 5" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-suitcase" aria-hidden="true"></i> Journeys <span class="badge">42</span></a>
+          <a href="javascript:void(0)" ng-click="active = 5" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-suitcase" aria-hidden="true"></i> Routes <span class="badge">{{routeCounter}}</span></a>
           </span>
           <span class="pull-right">
           <a href="#" class="btn btn-link" style="text-decoration:none;"><i class="fa fa-lg fa-at" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Mention"></i></a>
@@ -193,7 +193,37 @@
               </div>
           </div>
         </uib-tab>
-        <uib-tab index="5">Vertical content 2</uib-tab>
+        <uib-tab index="5">
+          <uib-accordion close-others="oneAtATime">
+            <div ng-repeat="route in routes" uib-accordion-group class="panel-default" heading="{{route.name + ' ('+route.places.length+' places)'}}" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
+              <div class="timeline timeline-line-dotted">
+                      <span class="timeline-label">
+                          <span class="label label-primary">Distances are approximate</span>
+                      </span>
+                      <div class="timeline-item" ng-repeat="place in route.places track by $index">
+                          <div class="timeline-point timeline-point-success">
+                              <i class="fa fa-money"></i>
+                          </div>
+                          <div class="timeline-event">
+                              <div class="timeline-heading">
+                                  <h4>{{place.name}}</h4>
+                              </div>
+                              <div class="timeline-body">
+                                  <p>3 Offers</p>
+                              </div>
+                              <div class="timeline-footer">
+                                  <p class="text-right">{{it.distance}}</p>
+                              </div>
+                          </div>
+                          <span class="timeline-label">
+                            <span class="label label-primary" ng-if="route.places[$index + 1].name">{{route.places[$index + 1].distance}} to {{route.places[$index + 1].name}}</span>
+                        </span>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </uib-accordion>
+        </uib-tab>
         <uib-tab index="6">
           <div style="padding-bottom: 50px;">
           <h3 ng-click="backToAlbums()" style="float: left;"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</h3>
@@ -236,5 +266,14 @@
   </div>
   <div class="modal-footer">
     {{photo.time}}
+  </div>
+</script>
+
+<script type="text/ng-template" id="uploadPhotos.html">
+  <div class="modal-body" id="modal-body" ngf-drop="uploadImages($files)" class="drop-box" ngf-drag-over-class="'dragover'" ngf-multiple="true"  ngf-pattern="'image/*'">
+    <h2 class="text-center">Drag & Drop Images to upload</h2>
+    <section class="text-center" style="font-size: 64px;">
+      <i class="fa fa-file-image-o" aria-hidden="true"></i>
+    </section>
   </div>
 </script>
